[project]
name = "mk-yolo"
version = "0.1.0"
description = "Object detection for mk-yolo"
authors = [
    { name = "FIDA CYRILLE Rudio", email = "fidacyrillerudio@gmail.com" },{ name = "Hao-Tang, Tsui", email = "henrytsui000@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
keywords = ["yolo", "object detection", "computer vision"]
dependencies = [
    "einops>=0.6.1",
    "faster-coco-eval>=1.6.6",
    "graphviz>=0.20.1",
    "hydra-core>=1.3.2",
    "lightning>=1.9.5",
    "loguru>=0.7.3",
    "numpy>=1.21.6",
    "opencv-python>=4.11.0.86",
    "pillow>=9.5.0",
    "pycocotools>=2.0.7",
    "requests>=2.31.0",
    "rich>=13.8.1",
    "torch>=1.13.1",
    "torchvision>=0.14.1",
    "wandb>=0.18.7",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["yolo*"]

[tool.setuptools]
package-data = {"yolo" = ["**/*.yaml"]}
include-package-data = true


[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]

[dependency-groups]
dev = [
    "pre-commit>=2.21.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.11.12",
    "tensorboard>=2.11.2",
]

[project.scripts]
yolo = "yolo.lazy:main"
